@@ -3,6 +3,7 @@ cm4all-beng-proxy (0.3) unstable; urgency=low
   * implemented widget filters
   * translate: initialize all fields of a CGI address
   * fork: read request body on EAGAIN
+  * fork: implemented the direct() method with splice()
   * python: added class Response
   * prototypes/translate.py:
     - support "filter"
